# node-provider-labeler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  chart-node-provider-labeler-0.10.0.tgz  chart-node-provider-labeler-0.9.0.tgz  chart-node-provider-labeler-5.tgz  flake.nix  node-provider-labeler-0.11.0.tgz  node-provider-labeler-0.12.0.tgz  node-provider-labeler-0.13.0.tgz  node-provider-labeler-0.14.0.tgz  node-provider-labeler-0.15.0.tgz  node-provider-labeler-0.17.0.tgz  node-provider-labeler-0.18.0.tgz  node-provider-labeler-0.19.0.tgz  node-provider-labeler-0.20.0.tgz  node-provider-labeler-5.tgz
.github/workflows/: build.yaml  chart.yaml  ci.yaml  release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
charts/node-provider-labeler/: Chart.yaml  README.md  README.md.gotmpl  artifacthub-repo.yml  values.schema.json  values.yaml
charts/node-provider-labeler/templates/: NOTES.txt  deployment.yaml  service.yaml
deploy/: deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
kustomize/: konvert.yaml  kustomization.yaml
kustomize/base/: clusterrole-node-provider-labeler.yaml  clusterrolebinding-node-provider-labeler.yaml  deployment-node-provider-labeler.yaml  kustomization.yaml  service-node-provider-labeler.yaml  serviceaccount-node-provider-labeler.yaml
scripts/: release.sh
src/: controller.rs  diagnostics.rs  lib.rs  main.rs  meta.rs  metrics.rs  provider_id.rs  template.pest  template.rs
