[package]
name = "node-provider-labeler"
version = "0.7.0"
edition = "2021"

[lib]
name = "node_provider_labeler"
path = "src/lib.rs"

[[bin]]
name = "node-provider-labeler"
path = "src/main.rs"

[dependencies]
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["v1_26"] }
tokio = { version = "1.37.0", features = ["full"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.59"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
pest = "2.7.10"
pest_derive = "2.7.10"
ttl-queue = "0.2.0"
time = "0.3.36"
axum = "0.7.5"
prometheus = "0.13.4"
